--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node -r dotenv/config ./src/index/ts",
+    "dev": "nodemon --watch 'src/**' --ext 'ts' --exec ts-node -r dotenv/config ./src/index.ts",
     "build": "tsc",
     "start": "node ./dist/src/index.js"
   },
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
   }
 }
